<resources>
    <string name="app_name">StuFun</string>
    <string name="sample_button">Sample Button</string>
    <string name="select_n_user">Select \nUser</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="not_a_account_yet_sign_up">Not a Account Yet? Sign Up</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="course">Course</string>
    <string name="branch">Branch</string>
    <string name="section">Section</string>
    <string name="year">Year</string>
    <string name="stufun">Stufun</string>
    <string name="stufu">StuFun</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="send_verification">Send Verification</string>
    <string name="verify">Verify</string>
    <string name="otp">OTP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="organization_name">Organization Name</string>
    <string name="not_created_classroom_yet">Not Created Classroom yet</string>
    <string name="create">Create</string>
    <string name="classroom_name">ClassRoom Name</string>
    <string name="subject">Subject</string>
    <string name="teacher_name">Teacher name</string>
    <string name="classroom_subject">Classroom Subject</string>
    <string name="create_classroom">Create Classroom</string>
    <string name="just_enter_few_details">Just Enter Few Details</string>
    <string name="add_nannouncement">Add \nAnnouncement</string>
    <string name="discussion_npanel">Discussion \nPanel</string>
    <string name="students">Students</string>
    <string name="classname">ClassName</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="announcement">Announcement</string>
    <string name="enter_the_classroom_id_to_join">Enter the Classroom id to Join</string>
    <string name="class_id">Class ID</string>
    <string name="join_class">Join Class</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="questiuon">Questiuon</string>
    <string name="answer">Answer</string>
    <string name="view_reply">View Reply</string>
    <string name="new_questions">New Questions</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="post">Post</string>
    <string name="chat_left_message">Chat Left Message</string>
    <string name="chat_right_message">Chat Right Message</string>
    <string name="create_account">Create Account</string>
    <string name="your_class_code">Your Class Code</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="type_message">Type Message</string>
    <string name="search">Search</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="profile">Profile</string>
    <string name="my_classroom">My Classroom</string>
    <string name="my_chat">My Chat</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="security">Security</string>
    <string name="to_reset_password_enter_your_email_press_the_button_and_check_mail_to_follow_instruction">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="forgot_your_password">Forgot/Reset your password?</string>
    <string name="back">BACK</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_email_here">Your email here</string>
    <string name="delete_class">Delete Class</string>
    <string name="classmates">Classmates</string>
    <string name="select_user">Select User</string>
    <string name="blocked_student">Blocked Student</string>
</resources>