<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Student.JoinClassroomFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_classroom_id_to_join"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_bg"
        android:padding="9dp"
        android:id="@+id/join_class_edit"
        android:drawableStart="@drawable/ic_outline_book_24"
        android:drawablePadding="5dp"
        android:hint="@string/class_id"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:id="@+id/join_class_btn"
        android:background="@drawable/rectangle_button"
        android:text="@string/join_class"
        android:textColor="@color/colorWhite"/>
</LinearLayout>