<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Teacher.SendInvitationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_class_code"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="30sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_id"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:id="@+id/class_id"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/send_email"
        android:background="@drawable/rectangle_button"
        android:text="@string/send_invitation"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/back_to_home"
        android:background="@drawable/rectangle_button"
        android:text="Back to Home"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"/>




</LinearLayout>