<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/oval_green"
        android:layout_marginTop="-270dp"
        />
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/oval_white"
        android:src="@drawable/student"
        android:padding="25dp"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:hint="@string/email_address"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/user_email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_button"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:textSize="20sp"
        android:text="@string/login"
        android:layout_above="@+id/signup_txt"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/signup_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_a_account_yet_sign_up"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:gravity="center"
        />
</RelativeLayout>