<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/home_head_layout"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_classroom"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/create_classroom_round"
            android:background="@drawable/oval_green"
            android:src="@drawable/ic_outline_add_circle_outline_24"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_classroom_recyclerview"
        android:layout_below="@id/home_head_layout"
        android:layout_marginTop="15dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_class_layout"
        android:layout_centerInParent="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_class_txt"
            android:text="@string/not_created_classroom_yet"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_below="@id/no_class_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:id="@+id/create_classroom_square"
            android:background="@drawable/rectangle_button"
            android:text="@string/create"
            />

    </RelativeLayout>


</RelativeLayout>