<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back"
            android:layout_margin="20dp"
            android:id="@+id/setting_back"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tushar Gupta"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/my_name"/>

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/my_img"
        android:layout_margin="30dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization_name"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/my_img"
        android:drawableStart="@drawable/ic_outline_email_24"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:id="@+id/my_email"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization_name"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/my_email"
        android:drawableStart="@drawable/ic_outline_school_24"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:id="@+id/my_organization"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@+id/my_organization"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/edit_profile"
                android:id="@+id/my_edit_account"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/security"
                android:id="@+id/my_security"
                />
            <TextView
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/logout"
                android:id="@+id/my_logout"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>