<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login.TeacherRegister">
    <RelativeLayout
        android:background="@drawable/square_two_side_rnd"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/oval_white"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_outline_person_24"
            android:layout_marginTop="-30dp"
            android:id="@+id/login_image_select"
            tools:ignore="ContentDescription" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:padding="9dp"
            android:drawablePadding="5dp"
            android:hint="@string/name"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_outline_person_24"
            android:id="@+id/teacher_login_name"
            android:importantForAutofill="no"
            android:elevation="3dp"
            tools:ignore="LabelFor" />
        <EditText
            android:elevation="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:padding="9dp"
            android:layout_below="@id/teacher_login_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/organization_name"
            android:inputType="textPersonName"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_outline_security_24"
            android:id="@+id/teacher_organization_name"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/rectangle_button"
            android:text="@string/create"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/teacher_create_user"/>
    </RelativeLayout>
</RelativeLayout>